play-pit/Monitoring/Grafana/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - grafana.kx-as-code.local
  rules:
  - host: grafana.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: grafana
           servicePort: 3000

---
